--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
     <div class="badge">
         <div class="badge-title">Buy list</div>
         <div class="badge-author">Created by:
-        <!-- <div class="badge-author">-->S.M.</div>
+        <!-- <div class="badge-author">-->Stetsyk M.</div>
     </div>
 </body>
 
