Add button event

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
 
-
+    <script src="code.js"></script>
     <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -15,7 +15,7 @@
         <div class="box items-box">
             <div class="item-add-field">
                 <input type="text" id="item-add-text" placeholder="Назва товару">
-                <button type="submit" id="item-add-button" class="btn" data-tooltip="Add">Додати</button>
+                <button type="submit" id="item-add-btn" class="btn" data-tooltip="Add">Додати</button>
             </div>
             <div class="items-list">
                 <div class="item">
