Js draft: add, delete item, change buy state

--- a/main.html
+++ b/main.html
@@ -18,8 +18,9 @@
                 <button type="submit" id="item-add-btn" class="btn" data-tooltip="Add">Додати</button>
             </div>
             <div class="items-list">
-                <div class="item">
-                    <span class="item-name bought">Помідори</span>
+
+                <div class="item bought">
+                    <span class="item-name">Помідори</span>
                     <div class="quantity-controls">
                         <!-- <input type="text" value="2" class="quantity-value"/> -->
                         <span class="quantity-value">2</span>
