Add stats updating

--- a/main.html
+++ b/main.html
@@ -68,18 +68,18 @@
             <div class="stats-items">
                 <span class="stats-item">
                     Печиво
-			        <span class="amount">2</span>
+			        <span class="stats-quantity">2</span>
 		        </span>
                 <span class="stats-item">
                     Сир
-			        <span class="amount">1</span>
+			        <span class="stats-quantity">1</span>
 		        </span>
             </div>
-            <span class="stats-category">Куплено</span>
-            <div class="stats-items bought">
+            <span class="stats-category bought">Куплено</span>
+            <div class="stats-items">
                 <span class="stats-item">
                     Помідори
-			        <span class="amount">2</span>
+			        <span class="stats-quantity">2</span>
 		        </span>
             </div>
         </div>
