Fix stats category structure

--- a/main.html
+++ b/main.html
@@ -64,23 +64,27 @@
         </div>
 
         <div class="box stats-box">
-            <span class="stats-category" style="border-radius: inherit;">Залишилося</span>
-            <div class="stats-items">
-                <span class="stats-item">
-                    Печиво
-			        <span class="stats-quantity">2</span>
-		        </span>
-                <span class="stats-item">
-                    Сир
-			        <span class="stats-quantity">1</span>
-		        </span>
+            <div>
+                <span class="stats-category" style="border-radius: inherit;">Залишилося</span>
+                <div class="stats-items">
+                    <span class="stats-item">
+                        Печиво
+		    	        <span class="stats-quantity">2</span>
+		            </span>
+                    <span class="stats-item">
+                        Сир
+		    	        <span class="stats-quantity">1</span>
+		            </span>
+                </div>
             </div>
-            <span class="stats-category bought">Куплено</span>
-            <div class="stats-items">
-                <span class="stats-item">
-                    Помідори
-			        <span class="stats-quantity">2</span>
-		        </span>
+            <div class="bought">
+                <span class="stats-category">Куплено</span>
+                <div class="stats-items">
+                    <span class="stats-item">
+                        Помідори
+		    	        <span class="stats-quantity">2</span>
+		            </span>
+                </div>
             </div>
         </div>
     </main>
