Change sample products

--- a/main.html
+++ b/main.html
@@ -19,47 +19,6 @@
             </div>
             <div class="items-list">
 
-                <div class="item bought">
-                    <span class="item-name">Помідори</span>
-                    <div class="quantity-controls">
-                        <!-- <input type="text" value="2" class="quantity-value"/> -->
-                        <span class="quantity-value">1</span>
-                    </div>
-                    <div class="action-buttons">
-                        <button class="btn action-btn buy" data-tooltip="tooltip">Не куплено</button>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <span class="item-name">Печиво</span>
-                    <div class="quantity-controls">
-                        <button class="btn quantity-btn minus" data-tooltip="-">-
-                        </button>
-                        <!-- <input type="text" value="2" class="quantity-value"/> -->
-                        <span class="quantity-value">2</span>
-                        <button class="btn quantity-btn plus" data-tooltip="+">+</button>
-                    </div>
-                    <div class="action-buttons">
-                        <button class="btn action-btn buy" data-tooltip="tooltip">Куплено</button>
-                        <button class="btn action-btn delete" data-tooltip="x">✖</button>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <input type="text" class="item-name" value="Сир"/>
-                    <div class="quantity-controls">
-                        <button class="btn quantity-btn minus disabled" disabled="disabled" data-tooltip="-">
-                            -
-                        </button>
-                        <!-- <input type="text" value="2" class="quantity-value"/> -->
-                        <span class="quantity-value">1</span>
-                        <button class="btn quantity-btn plus" data-tooltip="+">+</button>
-                    </div>
-                    <div class="action-buttons">
-                        <button class="btn action-btn buy" data-tooltip="tooltip">Куплено</button>
-                        <button class="btn action-btn delete" data-tooltip="x">✖</button>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -67,23 +26,13 @@
             <div>
                 <span class="stats-category" style="border-radius: inherit;">Залишилося</span>
                 <div class="stats-items">
-                    <span class="stats-item">
-                        Печиво
-		    	        <span class="stats-quantity">2</span>
-		            </span>
-                    <span class="stats-item">
-                        Сир
-		    	        <span class="stats-quantity">1</span>
-		            </span>
+                    
                 </div>
             </div>
             <div class="bought">
                 <span class="stats-category">Куплено</span>
                 <div class="stats-items">
-                    <span class="stats-item">
-                        Помідори
-		    	        <span class="stats-quantity">2</span>
-		            </span>
+                    
                 </div>
             </div>
         </div>
@@ -91,7 +40,7 @@
     <div class="badge">
         <div class="badge-title">Buy list</div>
         <div class="badge-author">Created by:
-        <!-- <div class="badge-author">-->Stetsyk M.</div>
+        <!-- <div class="badge-author">-->S.M.</div>
     </div>
 </body>
 
